# arho-feature-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .qgis-plugin-ci  README.md  arho-feature-template.code-workspace  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  ruff_defaults.toml
.github/: labeler.yml  release-drafter.yml
.github/workflows/: code-style.yml  enforce-labels.yml  release-drafter.yml  release.yml  test-and-pre-release.yml  tests.yml
arho_feature_template/: LandUsePlanDialog.py  SimpleDrawTool.py  __init__.py  access_violation_plugin.txt  build.py  metadata.txt  plugin.py  update_plan.py
arho_feature_template/arho_feature_template_processing/: provider.py
arho_feature_template/core/: add_feature_form.py  add_feature_panel.py  create_land_use_plan.py  exceptions.py  feature_template.py  feature_template_library.py  new_plan.py  template_library_config.py  update_plan.py
arho_feature_template/gui/: ask_credentials.py  ask_credentials.ui  feature_attribute_form.py  feature_attribute_form.ui  load_plan_dialog.py  load_plan_dialog.ui  new_land_use_plan_form.py  new_land_use_plan_form.ui  plan_regulation_group_widget.py  plan_regulation_group_widget.ui  plan_regulation_widget.py  plan_regulation_widget.ui  template_attribute_form.py  template_attribute_form.ui  template_attribute_form2.ui  template_attribute_form_old.ui  template_dock.py  template_dock.ui
arho_feature_template/resources/: asemakaava-template-library-test.json  katja.yaml
docs/: development.md
tests/: test_plugin.py
(+12 files in other folders)
