[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arho-feature-template"
version = "0.1.0"
requires-python = ">= 3.8"

[tool.setuptools]
packages = ["arho_feature_template"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = "tests"

[tool.coverage.report]
omit = ["arho_feature_template/qgis_plugin_tools/*"]

[tool.ruff]
target-version = "py38"
extend = "ruff_defaults.toml"
exclude = ["arho_feature_template/qgis_plugin_tools"]

[tool.ruff.lint]
unfixable = [
    "F401", # unused imports
    "F841", # unused variables
]

[[tool.mypy.overrides]]
module = "arho_feature_template.qgis_plugin_tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["qgis.*", "osgeo.*"]
ignore_missing_imports = true

[tool.qgis-plugin-ci]
plugin_path = "arho_feature_template"
github_organization_slug= "LKajan"
project_slug = "arho-feature-template"
